# zenburn-sonar-theme

./: CMakeLists.txt
zenburn-sonar/: .theme.lua.swp  CMakeLists.txt  awesome-icon-generator.cmake  theme.lua
